# elder-care

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/algo-runner/: main.go
backend/cmd/seed/: main.go
backend/cmd/server/: main.go
backend/internal/audit/: audit.go  audit_test.go
backend/internal/auth/: auth.go  auth_test.go  cookie_test.go
backend/internal/baseline/: analyze.go  analyze_test.go  baseline.go  condition_profile.go  condition_profile_test.go  estimator.go  parity_test.go  (+7 more)
docs/superpowers/: AUDIT.md
evaluation/: .gitignore  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt
evaluation/results/: eval_full.csv  smoke.csv
evaluation/src/eldercare_eval/: __init__.py  algorithms.py  archetypes.py  cli.py  metrics.py  parity.py  plots.py  realdata.py  report.py  runner.py  simulator.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthGate.tsx  BMICard.test.tsx  BMICard.tsx  LangSwitcher.test.tsx  LangSwitcher.tsx  MetricChart.tsx  MetricEntryCard.tsx  Shell.tsx  Splash.tsx  SummaryGrid.tsx
frontend/lib/: api.ts  i18n.test.ts  i18n.ts  metric-meta.ts  push.ts
frontend/public/: sw.js
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart  theme.dart
mobile/test/: widget_test.dart
mobile/web/: index.html
(+90 files in other folders)
